--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,14 @@
 
   .image-container {
     position: relative;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .changeImage {
+    width: 100%;
+    max-width: 580px; /* Defina um valor máximo para evitar que a imagem fique muito grande */
+    height: auto;
   }
 
   .result-overlay {
@@ -37,11 +44,11 @@
 
   h1 {
     font-style: normal;
-    font-size: 80px;
+    font-size: 70px;
     line-height: 38px;
     color:#F09380;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 20px;
   }
 
   button {
@@ -62,4 +69,25 @@
   
   button:active {
     opacity: 0.8;
+  }
+
+  @media screen and (max-width: 600px) {
+    button {
+      width: 150px;
+      height: 40px;
+      font-size: 24px;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .result-overlay {
+      margin-top: 50px;
+      margin-bottom: 20px;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    h1 {
+      font-size: 60px;
+    }
   }
