--- a/styles.css
+++ b/styles.css
@@ -72,22 +72,14 @@
   }
 
   @media screen and (max-width: 600px) {
-    button {
-      width: 150px;
-      height: 40px;
-      font-size: 24px;
-    }
-  }
-
-  @media screen and (max-width: 600px) {
     .result-overlay {
+      font-size: 60px;
       margin-top: 50px;
       margin-bottom: 20px;
     }
-  }
-
-  @media screen and (max-width: 600px) {
+  
     h1 {
-      font-size: 60px;
+      font-size: 48px;
+      line-height: 28px;
     }
   }
